--- a/MyApp/app/src/main/res/layout/activity_scrolling.xml
+++ b/MyApp/app/src/main/res/layout/activity_scrolling.xml
@@ -9,16 +9,40 @@
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
 
+    <ListView
+        android:id="@+id/list_test"
+        android:layout_height="471dp"
+        android:layout_width="384dp"
+        tools:layout_editor_absoluteX="2dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
 
+
+    <!--
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="385dp"
         android:layout_height="217dp"
         app:srcCompat="@drawable/banner"
-        tools:layout_editor_absoluteY="-5dp"
+        tools:layout_editor_absoluteY="-4dp"
         tools:layout_editor_absoluteX="0dp"
         android:contentDescription="@string/singapore" />
 
+    <ListView
+        android:id="@+id/list_test1"
+        android:layout_height="275dp"
+        android:layout_width="378dp"
+        android:layout_marginTop="7dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+    -->
+    <!--android:entries="@array/myarray" -->
+
+    <!--
     <TextView
         android:id="@+id/textView"
         android:layout_width="91dp"
@@ -28,7 +52,6 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Button"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
@@ -94,11 +117,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp" />
 
+    -->
 
+    <!--
     <AnalogClock
+        android:id="@+id/analog_clock"
         android:layout_width="400dp"
         android:layout_height="400dp"
         android:dial="@mipmap/timg"
@@ -106,6 +133,8 @@
         android:hand_minute="@mipmap/clock_fen"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"/>
+        app:layout_constraintTop_toBottomOf="@+id/list_test"/>
+    -->
+
 
 </android.support.constraint.ConstraintLayout>
