--- a/MyApp/app/src/main/res/layout/activity_scrolling.xml
+++ b/MyApp/app/src/main/res/layout/activity_scrolling.xml
@@ -4,20 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="24dp"
+    android:paddingBottom="0dp"
     tools:context="com.ison.myapp.MainActivity"
-    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteY="0dp"
     tools:layout_editor_absoluteX="0dp">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:text="@string/singapore"
+        android:textSize="24sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp"
+        tools:layout_editor_absoluteY="2dp"
+        android:layout_marginLeft="16dp" />
 
     <ListView
         android:id="@+id/list_test"
-        android:layout_height="471dp"
-        android:layout_width="384dp"
-        tools:layout_editor_absoluteX="2dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="0dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
 
