--- a/MyApp/app/src/main/res/layout/list_item.xml
+++ b/MyApp/app/src/main/res/layout/list_item.xml
@@ -8,6 +8,7 @@
     tools:layout_editor_absoluteY="0dp"
     tools:layout_editor_absoluteX="0dp">
 
+
     <ImageView
         android:id="@+id/imgtou"
         android:layout_width="64dp"
@@ -15,26 +16,27 @@
         android:baselineAlignBottom="true"
         android:paddingStart="8dp"
         android:paddingEnd="0dp"
-        android:contentDescription="@string/app_name" />
+        android:contentDescription="@string/app_name"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="64dp"
-        android:layout_marginLeft="64dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
         android:orientation="vertical"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/imgtou"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/imgtou"
+        android:layout_marginLeft="0dp">
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="8dp"
             android:paddingEnd="0dp"
+            android:paddingStart="8dp"
             android:textColor="#1D1D1C"
             android:textSize="20sp" />
 
@@ -42,10 +44,11 @@
             android:id="@+id/says"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="8dp"
             android:paddingEnd="0dp"
+            android:paddingStart="8dp"
             android:textColor="#B4B4B9"
             android:textSize="14sp" />
     </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
