--- a/WechatAu/app/src/main/res/layout/activity_main.xml
+++ b/WechatAu/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,24 +9,132 @@
     tools:layout_editor_absoluteY="25dp"
     tools:layout_editor_absoluteX="0dp">
 
-    <include layout="@layout/header"
-        android:id="@+id/header" />
-
-    <ImageView
-        android:id="@+id/top_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/banner_1"
-        android:scaleType="fitXY"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        tools:layout_editor_absoluteX="0dp"
-        android:layout_marginTop="0dp"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center"/>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
+        <include layout="@layout/header"
+            android:id="@+id/header"/>
+
+        <ImageView
+            android:id="@+id/top_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/banner_1"
+            android:scaleType="fitXY"
+            app:layout_constraintTop_toBottomOf="@+id/header"
+            tools:layout_editor_absoluteX="0dp"
+            android:adjustViewBounds="true"
+            android:layout_gravity="center"/>
 
 
+        <LinearLayout
+            android:id="@+id/home_search_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/top_logo"
+            android:orientation="horizontal"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp">
+
+            <EditText
+                android:id="@+id/home_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:textSize="14sp"
+                android:hint="@string/home_search_text"
+                android:textColorHint="@color/color_white"
+                android:textColor="@color/color_white"
+                tools:layout_editor_absoluteY="8dp"
+                tools:layout_editor_absoluteX="8dp"
+                android:padding="10dp"
+                android:background="@drawable/bg_edittext"/>
+
+            <Button
+                android:id="@+id/home_search_btn"
+                android:drawableLeft="@drawable/search"
+                android:paddingLeft="12dp"
+                android:background="@drawable/button_round_18"
+                android:layout_height="38dp"
+                android:layout_width="38dp"
+                android:layout_marginLeft="-38dp"
+                android:layout_marginTop="0dp" />
+        </LinearLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+        <LinearLayout
+            android:id="@+id/home_create_break_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/home_search_layout"
+            android:orientation="vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_white"
+                android:textSize="24sp"
+                android:textAlignment="center"
+                android:text="@string/home_create_break_title"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_white"
+                android:textSize="12sp"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"
+                android:text="@string/home_create_break_text"/>
+        </LinearLayout>
+
+
+        <TableLayout
+            android:id="@+id/home_create_break_product_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/home_create_break_layout"
+            android:orientation="horizontal"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp">
+            <TableRow
+                android:id="@+id/home_create_break_product_tableRow"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/create_product"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/create_product"/>
+
+            </TableRow>
+        </TableLayout>
+
+        <include layout="@layout/footer"
+            android:id="@+id/footer"/>
+
+    </android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.NestedScrollView>
