--- a/MyBasicApp/app/src/main/res/layout/content_main.xml
+++ b/MyBasicApp/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Hello World! \n Hello World! 1 \n Hello World! 1\n Hello World! 1\n Hello World! 1\n Hello World! 1 \nHello World! \nHello World! \nHello World! 1\nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \nHello World! \n"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
