--- a/WechatAu/app/src/main/res/layout/activity_account.xml
+++ b/WechatAu/app/src/main/res/layout/activity_account.xml
@@ -56,7 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
-                    android:text="My Order"
+                    android:text="MY ORDERS"
                     android:layout_marginTop="8dp"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -78,6 +78,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"/>
             <LinearLayout
+                android:id="@+id/btns4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center">
