--- a/WechatAu/app/src/main/res/layout/activity_buy.xml
+++ b/WechatAu/app/src/main/res/layout/activity_buy.xml
@@ -39,7 +39,19 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="20dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/shape_red">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:text="MELBOURNE CENTRAL BOUTIQUE \n SHOP 156, FIRST FLOOR, MELBOURNE CENTRAL \nCnr La Trobe &amp; Swanston st, \nMelboume VIC 3000"/>
+            </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -47,6 +59,13 @@
                 android:text="COLLECT FROM"
                 android:background="@color/color_red"
                 android:layout_marginLeft="15dp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="20dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -55,11 +74,75 @@
                 android:background="@drawable/shape_red">
 
 
-
             </LinearLayout>
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="COLLECT TIME"
+                android:background="@color/color_red"
+                android:layout_marginLeft="15dp"/>
         </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="20dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/shape_red">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:text="Please fill in the order form"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/go_icon"/>
+            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="ORDER MAKER"
+                android:background="@color/color_red"
+                android:layout_marginLeft="15dp"/>
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="REMARKS"
+            android:textSize="14sp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="-10dp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="20dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:minHeight="100dp"
+                android:background="@drawable/shape_red">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="top"
+                    android:textSize="12sp"
+                    android:textColorHint="@color/color_white"
+                    android:hint="If requested, please leave a message"/>
+            </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
 
