--- a/WechatAu/app/src/main/res/layout/activity_orders.xml
+++ b/WechatAu/app/src/main/res/layout/activity_orders.xml
@@ -158,6 +158,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp">
                 <Button
+                    android:id="@+id/payment1"
                     android:layout_width="100dp"
                     android:layout_height="30dp"
                     android:background="@color/color_red"
@@ -274,6 +275,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp">
                 <Button
+                    android:id="@+id/payment2"
                     android:layout_width="100dp"
                     android:layout_height="30dp"
                     android:background="@color/color_red"
@@ -293,129 +295,6 @@
         </LinearLayout>
         <!-- List end -->
 
-        <!-- List start 3 -->
-        <LinearLayout
-            android:id="@+id/order_list_3"
-            android:layout_width="0dp"
-            android:layout_height="220dp"
-            android:orientation="horizontal"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical"
-            android:background="@color/color_white"
-            android:alpha="0.1"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/order_list_2"
-            android:padding="20dp">
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/order_list_2"
-            android:padding="20dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:textSize="12sp"
-                    android:textColor="@color/color_white"
-                    android:layout_alignParentLeft="true"
-                    android:text="Please pay as soon as possible"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:textColor="@color/color_white"
-                    android:text="Order number 1234567899"
-                    android:textSize="12sp"
-                    android:textAlignment="viewEnd"
-                    android:layout_alignParentRight="true" />
-            </RelativeLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_red"/>
-
-            <LinearLayout
-                android:id="@+id/order_list_3_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/product_list"
-                    android:adjustViewBounds="true"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="10dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
-                        android:text="Create Your Break"
-                        android:textColor="@color/color_white"
-                        android:textSize="16sp"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="$15"
-                        android:textColor="@color/color_red"
-                        android:textSize="16sp" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_red"/>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
-                <Button
-                    android:layout_width="100dp"
-                    android:layout_height="30dp"
-                    android:background="@color/color_red"
-                    android:text="Payment"
-                    android:layout_alignParentRight="true"
-                    android:textColor="@color/color_white"
-                    android:layout_marginRight="110dp"/>
-                <Button
-                    android:id="@+id/order_list_3_info_btn"
-                    android:layout_width="100dp"
-                    android:layout_height="30dp"
-                    android:background="@color/color_red"
-                    android:text="Details"
-                    android:layout_alignParentRight="true"
-                    android:textColor="@color/color_white"/>
-            </RelativeLayout>
-        </LinearLayout>
-        <!-- List end -->
-
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/order_list_3"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.NestedScrollView>
