--- a/WechatAu/app/src/main/res/layout/footer.xml
+++ b/WechatAu/app/src/main/res/layout/footer.xml
@@ -1,39 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.AppBarLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="0dp"
+    android:layout_width="match_parent"
     android:layout_height="60dp"
-    tools:context="com.example.ison.myapplication.MainActivity"
-    android:background="@color/color_red"
-    android:layout_marginRight="0dp"
-    app:layout_constraintRight_toRightOf="parent"
-    android:layout_marginLeft="0dp"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent">
+    android:layout_gravity="bottom">
 
 
         <TableLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:stretchColumns="*"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="1dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="1dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="1dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="1dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:stretchColumns="*">
                 <TableRow
-                    android:id="@+id/TableRow_nav"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
                         <Button
                             android:id="@+id/nav_home"
                             android:text="@string/nav_home_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:minHeight="0dp"
+                            android:minWidth="0dp"
                             android:textSize="12sp"
                             android:textColor="@color/color_white"
                             android:drawableTop="@drawable/home"
@@ -48,7 +37,11 @@
                             android:textColor="@color/color_white"
                             android:drawableTop="@drawable/cart"
                             android:background="@color/color_red"
-                            android:padding="5dp">
+                            android:padding="5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:minHeight="0dp"
+                            android:minWidth="0dp">
                         </Button>
 
                         <Button
@@ -58,10 +51,14 @@
                             android:textColor="@color/color_white"
                             android:drawableTop="@drawable/account"
                             android:background="@color/color_red"
-                            android:padding="5dp">
+                            android:padding="5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:minHeight="0dp"
+                            android:minWidth="0dp">
                         </Button>
 
                 </TableRow>
         </TableLayout>
 
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.AppBarLayout>
