--- a/WechatAu/app/src/main/res/layout/header.xml
+++ b/WechatAu/app/src/main/res/layout/header.xml
@@ -1,49 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.AppBarLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="0dp"
-    android:layout_height="50dp"
-    tools:context="com.example.ison.myapplication.MainActivity"
-    tools:layout_editor_absoluteY="0dp"
-    android:background="@color/color_red"
-    android:layout_marginRight="0dp"
-    app:layout_constraintRight_toRightOf="parent"
-    android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="parent">
+    android:layout_width="match_parent"
+    android:layout_height="50dp">
 
-        <ImageView
-            android:id="@+id/top_logo"
-            android:layout_width="101dp"
-            android:layout_height="43dp"
-            android:src="@drawable/kitkat_chocolatory"
-            tools:layout_editor_absoluteY="4dp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent" />
+        <LinearLayout
+            android:id="@+id/return_block"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:background="@color/color_red"
+            android:gravity="center_vertical">
+                <ImageView
+                    android:id="@+id/top_logo"
+                    android:layout_width="101dp"
+                    android:layout_height="43dp"
+                    android:src="@drawable/kitkat_chocolatory"
+                    tools:layout_editor_absoluteY="4dp"
+                    android:layout_marginLeft="8dp"
+                    app:layout_constraintLeft_toLeftOf="parent" />
 
-        <ImageView
-            android:id="@+id/top_gps"
-            android:layout_width="25dp"
-            android:src="@drawable/gps"
-            android:layout_height="17dp"
-            app:layout_constraintRight_toLeftOf="@+id/gps_location"
-            android:layout_marginRight="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" />
+                <ImageView
+                    android:id="@+id/top_gps"
+                    android:layout_width="25dp"
+                    android:src="@drawable/gps"
+                    android:layout_height="17dp"
+                    app:layout_constraintRight_toLeftOf="@+id/gps_location"
+                    android:layout_marginRight="0dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="8dp" />
 
-        <TextView
-            android:id="@+id/gps_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Australia"
-            android:textColor="@color/color_white"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" />
+                <TextView
+                    android:id="@+id/gps_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Australia"
+                    android:textColor="@color/color_white"
+                    android:layout_marginRight="8dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="8dp" />
+        </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.AppBarLayout>
